changes for my clusters and updated changes

--- a/projects/microservices/02-currency-conversion-microservice-basic/deployment.yaml
+++ b/projects/microservices/02-currency-conversion-microservice-basic/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   name: currency-conversion
   namespace: default
 spec:
-  replicas: 2 #CHANGE
+  replicas: 1 #CHANGE
   minReadySeconds: 45
   selector:
     matchLabels:
@@ -22,17 +22,16 @@ spec:
         app: currency-conversion
     spec:
       containers:
-      - image: in28min/currency-conversion:0.0.1-RELEASE #CHANGE
-        imagePullPolicy: IfNotPresent
-        name: currency-conversion
-        # env:
-        #   - name: CURRENCY_EXCHANGE_SERVICE_HOST
-        #     value: http://currency-exchange
-        
-        #     valueFrom: 
-        #       configMapKeyRef:
-        #         key: CURRENCY_EXCHANGE_SERVICE_HOST
-        #         name: currency-conversion-config-map
+        - image: in28min/currency-conversion:0.0.1-RELEASE #CHANGE
+          imagePullPolicy: IfNotPresent
+          name: currency-conversion
+          env:
+            - name: CURRENCY_EXCHANGE_SERVICE_HOST
+              # value: http://currency-exchange
+              valueFrom:
+                configMapKeyRef:
+                  key: CURRENCY_EXCHANGE_SERVICE_HOST
+                  name: currency-conversion-config-map
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
@@ -45,10 +44,10 @@ metadata:
   namespace: default
 spec:
   ports:
-  - port: 8100 #CHANGE
-    protocol: TCP
-    targetPort: 8100 #CHANGE
+    - port: 8100 #CHANGE
+      protocol: TCP
+      targetPort: 8100 #CHANGE
   selector:
     app: currency-conversion
   sessionAffinity: None #CHANGE
-  type: LoadBalancer
+  type: NodePort
